--- a/css/elzero.css
+++ b/css/elzero.css
@@ -199,9 +199,9 @@ header .mega-menu .links li:not(:last-child) {
 }
 
 @media (max-width: 767px) {
-  header .mega-menu .links:first-of-type li:last-child{
+  header .mega-menu .links:first-of-type li:last-child {
     border-bottom: 1px solid var(--border-color);
-  } 
+  }
 }
 
 header .mega-menu .links li::before {
@@ -350,7 +350,8 @@ header .mega-menu .links li i {
   background-color: white;
   border-radius: 6px;
   overflow: hidden;
-  transition: transform var(--main-transitions), box-shadow var(--main-transitions);
+  transition: transform var(--main-transitions),
+    box-shadow var(--main-transitions);
 }
 
 .articles .box:hover {
@@ -417,7 +418,8 @@ header .mega-menu .links li i {
 .gallery .box {
   padding: 15px;
   background-color: white;
-  box-shadow: 0px 12px 20px 0px rgb(0 0 0 / 13% ) , 0px 2px 4px 0px rgb(0 0 0 / 12%);
+  box-shadow: 0px 12px 20px 0px rgb(0 0 0 / 13%),
+    0px 2px 4px 0px rgb(0 0 0 / 12%);
 }
 
 .gallery .box .image {
@@ -436,11 +438,11 @@ header .mega-menu .links li i {
   height: 0;
   opacity: 0;
   z-index: 2;
-} 
+}
 
 .gallery .box .image:hover img {
   transform: rotate(5deg) scale(1.1);
-} 
+}
 
 .gallery .box .image:hover::before {
   animation: flashing 0.7s;
@@ -451,6 +453,148 @@ header .mega-menu .links li i {
   transition: var(--main-transitions);
 }
 /* end gallery */
+/* start features */
+.features {
+  padding-top: var(--main-padding-top);
+  padding-bottom: var(--main-padding-bottom);
+  position: relative;
+  background-color: white;
+}
+
+.features .container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 40px;
+}
+
+.features .box {
+  text-align: center;
+  border: 1px solid #ccc;
+}
+
+.features .box .img-holder {
+  position: relative;
+  overflow: hidden;
+}
+
+.features .box .img-holder::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.features .box .img-holder::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  border-style: solid;
+  border-width: 0 0 170px 500px;
+  border-color: transparent transparent white transparent;
+  transition: var(--main-transitions);
+}
+
+.features .box .img-holder img {
+  max-width: 100%;
+}
+
+.features .box:hover .img-holder::after {
+  border-width: 170px 500px 170px 0;
+}
+
+.features .box h2 {
+  position: relative;
+  font-size: 40px;
+  margin: auto;
+  width: fit-content;
+}
+
+.features .box h2::after {
+  content: "";
+  position: absolute;
+  bottom: -20px;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 5px;
+  width: calc(100% - 30px);
+}
+
+.features .box p {
+  line-height: 2;
+  font-size: 20px;
+  margin: 30px 0;
+  padding: 25px;
+  color: #777;
+}
+
+.features .box a {
+  display: block;
+  border: 3px solid transparent;
+  width: fit-content;
+  margin: 0 auto 30px;
+  font-weight: bold;
+  font-size: 22px;
+  padding: 10px 30px;
+  border-radius: 6px;
+  transition: var(--main-transitions);
+}
+
+.features .quality .img-holder::before {
+  background-color: #f4403660;
+}
+
+.features .quality h2::after {
+  background-color: #f44036;
+}
+
+.features .quality a {
+  color: #f44036;
+  border-color: #f44036;
+  background: linear-gradient(to right, #f44036 50%, white 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+}
+
+.features .box a:hover {
+  background-position: left bottom;
+  color: white;
+}
+
+.features .time .img-holder::before {
+  background-color: #00968860;
+}
+
+.features .time h2::after {
+  background-color: #009688;
+}
+
+.features .time a {
+  color: #009688;
+  border-color: #009688;
+  background: linear-gradient(to right, #009688 50%, white 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+}
+
+.features .passion .img-holder::before {
+  background-color: #03a9f460;
+}
+
+.features .passion h2::after {
+  background-color: #03a9f4;
+}
+
+.features .passion a {
+  color: #03a9f4;
+  border-color: #03a9f4;
+  background: linear-gradient(to right, #03a9f4 50%, white 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+}
+/* end features */
 /* start animation */
 @keyframes up-down {
   0%,
@@ -484,7 +628,8 @@ header .mega-menu .links li i {
 }
 
 @keyframes flashing {
-  0%,40% {
+  0%,
+  40% {
     opacity: 1;
   }
   100% {
